--- a/about.html
+++ b/about.html
@@ -165,166 +165,126 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- About Start -->
-    <div class="container-xxl py-5">
-      <div class="container">
-        <div class="row g-4 align-items-end mb-4">
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <img class="img-fluid rounded" src="img/about.jpg" />
-          </div>
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-            <p
-              class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3"
-            >
-              About Us
-            </p>
-            <h1 class="display-5 mb-4">
-              We Help Our Clients To Grow Their Business
-            </h1>
-            <p class="mb-4">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-              diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-              lorem sit clita duo justo magna dolore erat amet
-            </p>
-            <div class="border rounded p-4">
-              <nav>
-                <div class="nav nav-tabs mb-3" id="nav-tab" role="tablist">
-                  <button
-                    class="nav-link fw-semi-bold active"
-                    id="nav-story-tab"
-                    data-bs-toggle="tab"
-                    data-bs-target="#nav-story"
-                    type="button"
-                    role="tab"
-                    aria-controls="nav-story"
-                    aria-selected="true"
-                  >
-                    Story
-                  </button>
-                  <button
-                    class="nav-link fw-semi-bold"
-                    id="nav-mission-tab"
-                    data-bs-toggle="tab"
-                    data-bs-target="#nav-mission"
-                    type="button"
-                    role="tab"
-                    aria-controls="nav-mission"
-                    aria-selected="false"
-                  >
-                    Mission
-                  </button>
-                  <button
-                    class="nav-link fw-semi-bold"
-                    id="nav-vision-tab"
-                    data-bs-toggle="tab"
-                    data-bs-target="#nav-vision"
-                    type="button"
-                    role="tab"
-                    aria-controls="nav-vision"
-                    aria-selected="false"
-                  >
-                    Vision
-                  </button>
-                </div>
-              </nav>
-              <div class="tab-content" id="nav-tabContent">
-                <div
-                  class="tab-pane fade show active"
-                  id="nav-story"
-                  role="tabpanel"
-                  aria-labelledby="nav-story-tab"
-                >
-                  <p>
-                    Tempor erat elitr rebum at clita. Diam dolor diam ipsum et
-                    tempor sit. Aliqu diam amet diam et eos labore.
-                  </p>
-                  <p class="mb-0">
-                    Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et
-                    eos labore. Clita erat ipsum et lorem et sit
-                  </p>
-                </div>
-                <div
-                  class="tab-pane fade"
-                  id="nav-mission"
-                  role="tabpanel"
-                  aria-labelledby="nav-mission-tab"
-                >
-                  <p>
-                    Tempor erat elitr rebum at clita. Diam dolor diam ipsum et
-                    tempor sit. Aliqu diam amet diam et eos labore.
-                  </p>
-                  <p class="mb-0">
-                    Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et
-                    eos labore. Clita erat ipsum et lorem et sit
-                  </p>
-                </div>
-                <div
-                  class="tab-pane fade"
-                  id="nav-vision"
-                  role="tabpanel"
-                  aria-labelledby="nav-vision-tab"
-                >
-                  <p>
-                    Tempor erat elitr rebum at clita. Diam dolor diam ipsum et
-                    tempor sit. Aliqu diam amet diam et eos labore.
-                  </p>
-                  <p class="mb-0">
-                    Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et
-                    eos labore. Clita erat ipsum et lorem et sit
-                  </p>
-                </div>
+  <!-- About Start -->
+  <div class="container-xxl py-5">
+    <div class="container">
+      <div class="row g-4 align-items-end mb-4">
+        <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+          <img class="img-fluid rounded" src="img/about.jpg" />
+        </div>
+        <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+          <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">
+            About Us
+          </p>
+          <h1 class="display-5 mb-4">
+            We Help Our Clients To Grow Their Business
+          </h1>
+          <p class="mb-4">
+            Welcome to SSS Accounting & Tax Solutions, founded in 2002 by CA Umesh Kumar Jethani. We offer a wide range
+            of professional services in Jaipur, including ITR and GST return filing, GST registration, TDS return
+            filing, ROC return filing, accounting, audit services, LLP and company registration, partnership firm
+            registration, GST consultancy, OPC registration, DIR-3 KYC, management consultancy, and funding services. We
+            take pride in delivering high-quality solutions and fostering long-lasting relationships with our clients.
+            Contact us today to discover how we can support you in achieving your financial goals.
+          </p>
+          <div class="border rounded p-4">
+            <nav>
+              <div class="nav nav-tabs mb-3" id="nav-tab" role="tablist">
+                <button class="nav-link fw-semi-bold active" id="nav-story-tab" data-bs-toggle="tab"
+                  data-bs-target="#nav-story" type="button" role="tab" aria-controls="nav-story" aria-selected="true">
+                  Story
+                </button>
+                <button class="nav-link fw-semi-bold" id="nav-mission-tab" data-bs-toggle="tab"
+                  data-bs-target="#nav-mission" type="button" role="tab" aria-controls="nav-mission"
+                  aria-selected="false">
+                  Mission
+                </button>
+                <button class="nav-link fw-semi-bold" id="nav-vision-tab" data-bs-toggle="tab"
+                  data-bs-target="#nav-vision" type="button" role="tab" aria-controls="nav-vision"
+                  aria-selected="false">
+                  Vision
+                </button>
+              </div>
+            </nav>
+            <div class="tab-content" id="nav-tabContent">
+              <div class="tab-pane fade show active" id="nav-story" role="tabpanel" aria-labelledby="nav-story-tab">
+                <p>
+                  Our journey began with a simple goal: to provide reliable and effective financial solutions. Over the
+                  years, we have expanded our services to cover all aspects of accounting and taxation, building a
+                  reputation for excellence and trust in the industry. From small startups to established businesses,
+                  our dedicated team has been helping clients navigate the complexities of financial management,
+                  ensuring compliance and maximizing growth opportunities.
+                </p>
+
+              </div>
+              <div class="tab-pane fade" id="nav-mission" role="tabpanel" aria-labelledby="nav-mission-tab">
+                <p>
+                  Our mission is to deliver comprehensive financial services that drive success and foster growth. We
+                  strive to understand the unique needs of each client, providing personalized solutions that enhance
+                  their financial stability and business performance. We are committed to transparency, integrity, and
+                  excellence in all our interactions, aiming to be the trusted partner our clients can rely on for all
+                  their financial needs.
+                </p>
+
+              </div>
+              <div class="tab-pane fade" id="nav-vision" role="tabpanel" aria-labelledby="nav-vision-tab">
+                <p>
+                  Our vision is to be the leading provider of accounting and financial services, known for our
+                  innovative solutions and exceptional client service. We aim to set new standards in the industry,
+                  continuously evolving to meet the changing needs of our clients. By embracing technology and fostering
+                  a culture of continuous improvement, we seek to deliver unparalleled value and support to businesses,
+                  helping them achieve their financial goals with confidence.
+                </p>
+
               </div>
             </div>
           </div>
         </div>
-        <div class="border rounded p-4 wow fadeInUp" data-wow-delay="0.1s">
-          <div class="row g-4">
-            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
-              <div class="h-100">
-                <div class="d-flex">
-                  <div
-                    class="flex-shrink-0 btn-lg-square rounded-circle bg-primary"
-                  >
-                    <i class="fa fa-times text-white"></i>
-                  </div>
-                  <div class="ps-3">
-                    <h4>No Hidden Cost</h4>
-                    <span>Clita erat ipsum lorem sit sed stet duo justo</span>
-                  </div>
-                  <div class="border-end d-none d-lg-block"></div>
+      </div>
+      <div class="border rounded p-4 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="row g-4">
+          <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+            <div class="h-100">
+              <div class="d-flex">
+                <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
+                  <i class="fa fa-times text-white"></i>
                 </div>
-                <div class="border-bottom mt-4 d-block d-lg-none"></div>
-              </div>
-            </div>
-            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
-              <div class="h-100">
-                <div class="d-flex">
-                  <div
-                    class="flex-shrink-0 btn-lg-square rounded-circle bg-primary"
-                  >
-                    <i class="fa fa-users text-white"></i>
-                  </div>
-                  <div class="ps-3">
-                    <h4>Dedicated Team</h4>
-                    <span>Clita erat ipsum lorem sit sed stet duo justo</span>
-                  </div>
-                  <div class="border-end d-none d-lg-block"></div>
+                <div class="ps-3">
+                  <h4>No Hidden Cost</h4>
+                  <span>We ensure complete transparency in our pricing, so you only pay for the services you need with
+                    no unexpected fees</span>
                 </div>
-                <div class="border-bottom mt-4 d-block d-lg-none"></div>
+                <div class="border-end d-none d-lg-block"></div>
               </div>
+              <div class="border-bottom mt-4 d-block d-lg-none"></div>
             </div>
-            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
-              <div class="h-100">
-                <div class="d-flex">
-                  <div
-                    class="flex-shrink-0 btn-lg-square rounded-circle bg-primary"
-                  >
-                    <i class="fa fa-phone text-white"></i>
-                  </div>
-                  <div class="ps-3">
-                    <h4>24/7 Available</h4>
-                    <span>Clita erat ipsum lorem sit sed stet duo justo</span>
-                  </div>
+          </div>
+          <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
+            <div class="h-100">
+              <div class="d-flex">
+                <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
+                  <i class="fa fa-users text-white"></i>
+                </div>
+                <div class="ps-3">
+                  <h4>Dedicated Team</h4>
+                  <span>Our skilled team offers personalized support to ensure your financial needs are expertly
+                    handled</span>
+                </div>
+                <div class="border-end d-none d-lg-block"></div>
+              </div>
+              <div class="border-bottom mt-4 d-block d-lg-none"></div>
+            </div>
+          </div>
+          <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
+            <div class="h-100">
+              <div class="d-flex">
+                <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
+                  <i class="fa fa-phone text-white"></i>
+                </div>
+                <div class="ps-3">
+                  <h4>24/7 Available</h4>
+                  <span>Our services are available around the clock, ensuring you receive support whenever you need
+                    it.</span>
                 </div>
               </div>
             </div>
@@ -332,7 +292,8 @@
         </div>
       </div>
     </div>
-    <!-- About End -->
+  </div>
+  <!-- About End -->
 
     <!-- Facts Start -->
     <div class="container-fluid facts my-5 py-5">
