--- a/about.html
+++ b/about.html
@@ -165,7 +165,6 @@
       </div>
     </div>
     <!-- Page Header End -->
-
   <!-- About Start -->
   <div class="container-xxl py-5">
     <div class="container">
@@ -181,7 +180,7 @@
             We Help Our Clients To Grow Their Business
           </h1>
           <p class="mb-4">
-            Welcome to SSS Accounting & Tax Solutions, founded in 2002 by CA Umesh Kumar Jethani. We offer a wide range
+            Welcome to SSS Accounting & Tax Solutions, founded in 2020 by Saurabh. We offer a wide range
             of professional services in Jaipur, including ITR and GST return filing, GST registration, TDS return
             filing, ROC return filing, accounting, audit services, LLP and company registration, partnership firm
             registration, GST consultancy, OPC registration, DIR-3 KYC, management consultancy, and funding services. We
@@ -341,83 +340,59 @@
     </div>
     <!-- Facts End -->
 
-    <!-- Team Start -->
-    <div class="container-xxl py-5">
-      <div class="container">
-        <div
-          class="text-center mx-auto wow fadeInUp"
-          data-wow-delay="0.1s"
-          style="max-width: 600px"
-        >
-          <p
-            class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3"
-          >
-            Our Team
-          </p>
-          <h1 class="display-5 mb-5">Exclusive Team</h1>
+  <!-- Team Start -->
+  <div class="container-xxl py-5">
+    <div class="container">
+      <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px">
+        <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">
+          Our Team
+        </p>
+        <h1 class="display-5 mb-5">Exclusive Team</h1>
+      </div>
+      <div class="row g-4">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div class="team-item">
+            <img class="img-fluid rounded" src="img/team-2.jpg" alt="" />
+            <div class="team-text">
+              <h4 class="mb-0">Saurabh Tailor</h4>
+              <div class="team-social d-flex">
+                <a class="btn btn-square rounded-circle mx-1" href="https://www.facebook.com/saurabh.tailor.3910"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://wa.me/918619943077"><i class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://www.instagram.com/saurabhtailor_1998/"><i class="fab fa-instagram"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="row g-4">
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="team-item">
-              <img class="img-fluid rounded" src="img/team-1.jpg" alt="" />
-              <div class="team-text">
-                <h4 class="mb-0">Kate Winslet</h4>
-                <div class="team-social d-flex">
-                  <a class="btn btn-square rounded-circle mx-1" href=""
-                    ><i class="fab fa-facebook-f"></i
-                  ></a>
-                  <a class="btn btn-square rounded-circle mx-1" href=""
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a class="btn btn-square rounded-circle mx-1" href=""
-                    ><i class="fab fa-instagram"></i
-                  ></a>
-                </div>
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+          <div class="team-item">
+            <img class="img-fluid rounded" src="img/team-2.jpg" alt="" />
+            <div class="team-text">
+              <h4 class="mb-0">Sunil Singh Rathore</h4>
+              <div class="team-social d-flex">
+                <a class="btn btn-square rounded-circle mx-1" href="https://www.facebook.com/sunilsingh.rathore.5076"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://wa.me/918619943077"><i class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="team-item">
-              <img class="img-fluid rounded" src="img/team-2.jpg" alt="" />
-              <div class="team-text">
-                <h4 class="mb-0">Jac Jacson</h4>
-                <div class="team-social d-flex">
-                  <a class="btn btn-square rounded-circle mx-1" href=""
-                    ><i class="fab fa-facebook-f"></i
-                  ></a>
-                  <a class="btn btn-square rounded-circle mx-1" href=""
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a class="btn btn-square rounded-circle mx-1" href=""
-                    ><i class="fab fa-instagram"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="team-item">
-              <img class="img-fluid rounded" src="img/team-3.jpg" alt="" />
-              <div class="team-text">
-                <h4 class="mb-0">Doris Jordan</h4>
-                <div class="team-social d-flex">
-                  <a class="btn btn-square rounded-circle mx-1" href=""
-                    ><i class="fab fa-facebook-f"></i
-                  ></a>
-                  <a class="btn btn-square rounded-circle mx-1" href=""
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a class="btn btn-square rounded-circle mx-1" href=""
-                    ><i class="fab fa-instagram"></i
-                  ></a>
-                </div>
+        </div>
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+          <div class="team-item">
+            <img class="img-fluid rounded" src="img/team-3.jpg" alt="" />
+            <div class="team-text">
+              <h4 class="mb-0">CA Aditya Gupta</h4>
+              <div class="team-social d-flex">
+                <a class="btn btn-square rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100006299731743&sk=about"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://wa.me/918619943077"><i class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://www.instagram.com/aditya_gupta31/"><i class="fab fa-instagram"></i></a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Team End -->
+  </div>
+  <!-- Team End -->
 
      <!-- Footer Start -->
   <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
