--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             We Help Our Clients To Grow Their Business
           </h1>
           <p class="mb-4">
-            Welcome to SSS Accounting & Tax Solutions, founded in 2020. We offer a wide range
+            Welcome to SSS Accounting & Tax Solutions, founded in 2020 by Saurabh. We offer a wide range
             of professional services in Jaipur, including ITR and GST return filing, GST registration, TDS return
             filing, ROC return filing, accounting, audit services, LLP and company registration, partnership firm
             registration, GST consultancy, OPC registration, DIR-3 KYC, management consultancy, and funding services. We
@@ -645,7 +645,7 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">A</div>
               </div>
               <h6 class="font-weight-medium">Accounting & Business Support</h6>
-              <p class="mt-3">2499 - DEPEND ON WORK</p>
+              <p class="mt-3">Starting from 2499/-</p>
               <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
@@ -659,7 +659,7 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">G</div>
               </div>
               <h6 class="font-weight-medium">GST Services</h6>
-              <p class="mt-3">Starting from 99</p>
+              <p class="mt-3">Starting from 99/-</p>
               <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
@@ -673,7 +673,7 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">A</div>
               </div>
               <h6 class="font-weight-medium">Audit and Assurance Services (Internal and External)</h6>
-              <p class="mt-3">2499 - DEPEND ON WORK</p>
+              <p class="mt-3">Starting from 2499/-</p>
               <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
@@ -687,7 +687,7 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">I</div>
               </div>
               <h6 class="font-weight-medium">Income Tax Filing (ITR Filing)</h6>
-              <p class="mt-3">Starting from 299</p>
+              <p class="mt-3">Starting from 299/-</p>
               <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
@@ -701,7 +701,7 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">T</div>
               </div>
               <h6 class="font-weight-medium">TDS & TCS Return Filing</h6>
-              <p class="mt-3">Starting from 199</p>
+              <p class="mt-3">Starting from 199/-</p>
               <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
@@ -715,7 +715,7 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">P</div>
               </div>
               <h6 class="font-weight-medium">PF & ESI Registration & Return Filing</h6>
-              <p class="mt-3">1999 - DEPEND ON WORK</p>
+              <p class="mt-3">Starting from 1999/-</p>
               <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
@@ -729,7 +729,7 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">C</div>
               </div>
               <h6 class="font-weight-medium">Company Registration</h6>
-              <p class="mt-3">Starting from 5999</p>
+              <p class="mt-3">Starting from 5999/-</p>
               <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
@@ -743,7 +743,7 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">L</div>
               </div>
               <h6 class="font-weight-medium">LLP Registration</h6>
-              <p class="mt-3">Starting from 4999</p>
+              <p class="mt-3">Starting from 4999/-</p>
               <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
@@ -771,7 +771,7 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">I</div>
               </div>
               <h6 class="font-weight-medium">Import Export Services</h6>
-              <p class="mt-3">Starting from 799</p>
+              <p class="mt-3">Starting from 799/-</p>
               <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
@@ -1004,9 +1004,9 @@
             <div class="team-text">
               <h4 class="mb-0">Saurabh Tailor</h4>
               <div class="team-social d-flex">
-                <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://www.facebook.com/saurabh.tailor.3910"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://wa.me/918619943077"><i class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://www.instagram.com/saurabhtailor_1998/"><i class="fab fa-instagram"></i></a>
               </div>
             </div>
           </div>
@@ -1017,8 +1017,8 @@
             <div class="team-text">
               <h4 class="mb-0">Sunil Singh Rathore</h4>
               <div class="team-social d-flex">
-                <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://www.facebook.com/sunilsingh.rathore.5076"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://wa.me/918619943077"><i class="fab fa-whatsapp"></i></a>
                 <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
               </div>
             </div>
@@ -1030,9 +1030,9 @@
             <div class="team-text">
               <h4 class="mb-0">CA Aditya Gupta</h4>
               <div class="team-social d-flex">
-                <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100006299731743&sk=about"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://wa.me/918619943077"><i class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-square rounded-circle mx-1" href="https://www.instagram.com/aditya_gupta31/"><i class="fab fa-instagram"></i></a>
               </div>
             </div>
           </div>
