--- a/service.html
+++ b/service.html
@@ -179,7 +179,7 @@
                   <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">A</div>
                 </div>
                 <h6 class="font-weight-medium">Accounting & Business Support</h6>
-                <p class="mt-3">2499 - DEPEND ON WORK</p>
+                <p class="mt-3">Starting from 2499/-</p>
                 <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
@@ -193,7 +193,7 @@
                   <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">G</div>
                 </div>
                 <h6 class="font-weight-medium">GST Services</h6>
-                <p class="mt-3">99-999/-</p>
+                <p class="mt-3">Starting from 99/-</p>
                 <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
@@ -207,7 +207,7 @@
                   <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">A</div>
                 </div>
                 <h6 class="font-weight-medium">Audit and Assurance Services (Internal and External)</h6>
-                <p class="mt-3">2499 - DEPEND ON WORK</p>
+                <p class="mt-3">Starting from 2499/-</p>
                 <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
@@ -221,7 +221,7 @@
                   <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">I</div>
                 </div>
                 <h6 class="font-weight-medium">Income Tax Filing (ITR Filing)</h6>
-                <p class="mt-3">299-1999</p>
+                <p class="mt-3">Starting from 299/-</p>
                 <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
@@ -235,7 +235,7 @@
                   <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">T</div>
                 </div>
                 <h6 class="font-weight-medium">TDS & TCS Return Filing</h6>
-                <p class="mt-3">199-599</p>
+                <p class="mt-3">Starting from 199/-</p>
                 <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
@@ -249,7 +249,7 @@
                   <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">P</div>
                 </div>
                 <h6 class="font-weight-medium">PF & ESI Registration & Return Filing</h6>
-                <p class="mt-3">1999 - DEPEND ON WORK</p>
+                <p class="mt-3">Starting from 1999/-</p>
                 <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
@@ -263,7 +263,7 @@
                   <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">C</div>
                 </div>
                 <h6 class="font-weight-medium">Company Registration</h6>
-                <p class="mt-3">5999-11999</p>
+                <p class="mt-3">Starting from 5999/-</p>
                 <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
@@ -277,7 +277,7 @@
                   <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">L</div>
                 </div>
                 <h6 class="font-weight-medium">LLP Registration</h6>
-                <p class="mt-3">4999-8999</p>
+                <p class="mt-3">Starting from 4999/-</p>
                 <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
@@ -305,7 +305,7 @@
                   <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">I</div>
                 </div>
                 <h6 class="font-weight-medium">Import Export Services</h6>
-                <p class="mt-3">799-4999</p>
+                <p class="mt-3">Starting from 799/-</p>
                 <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
